<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">


    <!-- Card para el formulario -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="1dp"
            app:cardElevation="0dp"
            android:padding="20dp"
            android:backgroundTint="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNuevoAuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/nuevo_auto"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="34sp"/>

                <EditText
                    android:id="@+id/etNombreAuto"
                    android:inputType="text"
                    android:autofillHints="name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/modelo"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    tools:ignore="VisualLintTextFieldSize" />

                <!-- Marca del auto -->
                <EditText
                    android:id="@+id/etMarcaAuto"
                    android:inputType="text"
                    android:autofillHints="organizationName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/marca"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    tools:ignore="VisualLintTextFieldSize" />

                <!-- Precio del auto -->
                <EditText
                    android:id="@+id/etPrecioAuto"
                    android:inputType="numberDecimal"
                    android:autofillHints="precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/precio"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    tools:ignore="VisualLintTextFieldSize" />

                <!-- Fecha de fabricación -->
                <EditText
                    android:id="@+id/etFechaFabricacion"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_background"
                    android:hint="@string/fecha_de_fabricaci_n_yyyy_mm_dd"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    tools:ignore="VisualLintTextFieldSize" />

                <!-- Fragmento del mapa para seleccionar la ubicación -->
                <fragment
                    android:id="@+id/mapFragment"
                    android:layout_width="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_height="180dp"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    tools:ignore="FragmentTagUsage" />

                <!-- Mostrar coordenadas seleccionadas -->
                <TextView
                    android:id="@+id/tvCoordenadas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latitud_longitud"
                    android:layout_marginTop="10dp"
                    android:textColor="#757575"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Botón Guardar -->
        <Button
            android:id="@+id/btnGuardarAuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:text="@string/guardar_auto"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>
