<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal">

        <!-- Card para el formulario -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:padding="20dp"
            android:backgroundTint="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNuevaParte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:autofillHints=""
                    android:text="@string/nueva_parte"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="34sp"/>

                <EditText
                    android:id="@+id/etNombreParte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="text"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/nombre_de_la_parte"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    tools:ignore="VisualLintTextFieldSize" />

                <!-- Precio de la parte -->
                <EditText
                    android:id="@+id/etPrecioParte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_background"
                    android:hint="@string/precio"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    tools:ignore="VisualLintTextFieldSize" />

                <!-- Fecha de reemplazo -->
                <EditText
                    android:id="@+id/etFechaReemplazo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_background"
                    android:hint="@string/fecha_de_reemplazo_yyyy_mm_dd"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:textColor="#000"
                    android:textColorHint="#757575"
                    android:textSize="16sp"
                    tools:ignore="VisualLintTextFieldSize" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Botón Guardar -->
        <Button
            android:id="@+id/btnGuardarParte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/guardar_parte"
            android:textColor="#FFFFFF"
            android:padding="12dp"
            android:textSize="18sp"
            android:background="@drawable/button_background"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>
